--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@reduxjs/toolkit": "^2.11.2",
     "@supabase/supabase-js": "^2.97.0",
     "@tailwindcss/vite": "^4.2.0",
+    "formik": "^2.4.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
-    "supabase-js": "^0.0.1-security",
     "tailwindcss": "^4.2.0"
   },
   "devDependencies": {
